@@ -7,7 +7,7 @@ Dec 1, 2009 - Dec 19, 2009: Temporary addition of [forall x, P x] hints to
 
 Oct 19, 2009: Change in modules (CoLoR +35%)
 
-Aug 9, 2009: new files added in AreaMethod 
+Aug 9, 2009: new files added in AreaMethod
 
 May 21, 2008: New version of CoRN
   (needs +84% more time to compile)
